2012-08-23  Don Porter  <dgp@users.sourceforge.net>

	* unix/tkUnixWm.c: [Bugs 3554026,3561016] Stop crash with tearoff menus.

2012-08-17  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/nmakehlp.c: Add "-V<num>" option, in order to be able
	to detect partial version numbers.

2012-08-15  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/buildall.vc.bat: Only build the threaded builds by default
	* win/rules.vc:        Backport some improvements from Tcl 8.6
	* win/makefile.vc:

2012-08-11  Francois Vogel  <fvogelnew1@free.fr>

	* generic/tkTextTag.c:  [Bug 3554273]: Test textDisp-32.2 failed

2012-08-09  Stuart Cassoff  <stwo@users.sourceforge.net>

	* generic/tkEvent.c:	Remove useless (void *) casts
	* unix/tkUnixEvent.c:	introduced in checkin [b7a58eae61].
	* unix/tkUnixKey.c:	The warnings were false flags from a
	* unix/tkUnixRFont.c:	faulty OpenBSD C compiler.

2012-08-03  Francois Vogel  <fvogelnew1@free.fr>

	* tests/bind.test:  [Bug 3554081]: Test bind-22.10 failed

2012-08-02  Francois Vogel  <fvogelnew1@free.fr>

	* tests/spinbox.test:  [Bug 3553311]: Test spinbox-3.70 failed

2012-07-31  Donal K. Fellows  <dkf@users.sf.net>

	* unix/tkUnixKey.c (TkpSetKeycodeAndState, TkpInitKeymapInfo)
	(TkpGetKeySym): [Bug 3551802]: Convert from XKeycodeToKeysym to
	XkbKeycodeToKeysym to fix deprecation warning.

2012-07-31  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/nmakehlp.c: Backport from Tcl 8.6, but add -Q option from
	sampleextension.

2012-07-17  Don Porter  <dgp@users.sourceforge.net>

	*** 8.5.12 TAGGED FOR RELEASE ***

	* generic/tk.h:		Bump to 8.5.12 for release.
	* library/tk.tcl:
	* unix/configure.in:
	* unix/tk.spec:
	* win/configure.in:
	* README:

	* unix/configure:	autoconf-2.59
	* win/configure:

	* changes:	Updated for 8.5.12 release.

2012-07-17  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/makefile.vc: [Bug 3544932]: Visual studio compiler check fails

2012-07-08  Jan Nijtmans  <nijtmans@users.sf.net>
