@@ -1,6 +1,15 @@
+2012-08-24  Donal K. Fellows  <dkf@users.sf.net>
+
+	* library/tkfbox.tcl (GlobFiltered): [Bug 3558535]: Factor out the
+	filtered-sorted globbing code into one procedure that knows how to
+	avoid nasty problems when non-list filters are used. This allows the
+	rest of the [tk_getOpenFile] implementation to be ignorant of the
+	considerable complexities of globbing.
+
 2012-08-23  Don Porter  <dgp@users.sourceforge.net>
 
-	* unix/tkUnixWm.c: [Bugs 3554026,3561016] Stop crash with tearoff menus.
+	* unix/tkUnixWm.c: [Bugs 3554026,3561016]: Stop crash with tearoff
+	menus.
 
 2012-08-17  Jan Nijtmans  <nijtmans@users.sf.net>
 
